--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <tr><th>Certificado N.º</th><td>ARG-02-00018123630-20240311-20290311-BUE-357</td></tr>
     <tr><th>País</th><td>ARGENTINA</td></tr>
     <tr><th>Tipo Doc.</th><td>D.N.I - M -</td></tr>
-    <tr><th>Número</th><td>46008258</td></tr>
+    <tr><th>Número</th><td>44093277</td></tr>
     <tr><th>Fecha vigencia desde</th><td>11/03/2024</td></tr>
     <tr><th>Fecha vigencia hasta</th><td>11/03/2029</td></tr>
-    <tr><th>Apellido</th><td>MINICHIELLO</td></tr>
-    <tr><th>Nombre</th><td>Lorenzo Guillermo</td></tr>
+    <tr><th>Apellido</th><td>GUIC</td></tr>
+    <tr><th>Nombre</th><td>Nicolas Martín</td></tr>
     <tr><th>Acompañante</th><td>SÍ</td></tr>
   </table>
 
